sparrow-engine/sparrow-engine-mobile/NativeMethods.g.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace SparrowEngine.Native
{
    internal static unsafe partial class NativeMethods
    {
        const string __DllName = "sparrow_engine";





        /// <summary>
        ///  Create a focused orca cascade handle from detector and ecotype TFLite paths.
        ///
        ///  Returns null on error. Call `sparrow_engine_orca_last_error` for details.
        ///
        ///  # Safety
        ///  `detector_path` and `ecotype_path` must be valid, non-null, null-terminated
        ///  UTF-8 strings.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_orca_cascade_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void* sparrow_engine_orca_cascade_new(byte* detector_path, byte* ecotype_path, nuint num_threads);

        /// <summary>
        ///  Run one raw-audio segment through the orca cascade.
        ///
        ///  Returns 0 on success and nonzero on error. On error, call
        ///  `sparrow_engine_orca_last_error` for details.
        ///  A handle is single-owner and not thread-safe: do not call `run` concurrently
        ///  on the same handle, and free each handle exactly once.
        ///
        ///  # Safety
        ///  - `handle` must be a valid pointer returned by `sparrow_engine_orca_cascade_new`.
        ///  - `samples` must point to `n_samples` finite `f32` samples.
        ///  - `out` must be a valid writable pointer.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_orca_cascade_run", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int sparrow_engine_orca_cascade_run(void* handle, float* samples, nuint n_samples, uint sample_rate, SparrowOrcaResult* @out);

        /// <summary>
        ///  Initialize an orca result struct to its empty/default value.
        ///
        ///  Returns 0 on success and nonzero on error. This helper lets ctypes callers
        ///  reset a stack-allocated result before reuse without knowing Rust defaults.
        ///
        ///  # Safety
        ///  `out` must be a valid writable pointer.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_orca_result_init", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int sparrow_engine_orca_result_init(SparrowOrcaResult* @out);

        /// <summary>
        ///  Free an orca cascade handle. Null-safe.
        ///
        ///  # Safety
        ///  `handle` must be a pointer returned by `sparrow_engine_orca_cascade_new`, or null.
        ///  Each non-null handle must be freed exactly once.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_orca_cascade_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void sparrow_engine_orca_cascade_free(void* handle);

        /// <summary>
        ///  Return the last orca FFI error message for this thread, or null if no error.
        ///  The returned pointer is valid until the next orca FFI call on the same thread.
        ///
        ///  # Safety
        ///  Thread-safe. Returned pointer must not be freed by the caller.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_orca_last_error", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* sparrow_engine_orca_last_error();


    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct SparrowOrcaResult
    {
        public float detector_logit;
        public float detector_probability;
        public byte is_orca;
        public byte ecotype_ran;
        /// <summary>
        ///  Ecotype class index, or -1 when the detector gate skipped ecotype.
        /// </summary>
        public int ecotype_argmax;
        /// <summary>
        ///  Five ecotype probabilities. All zeros when ecotype did not run.
        /// </summary>
        public fixed float ecotype_probabilities[5];
    }



}
